trying to fix the extra space at end

--- a/src/app.css
+++ b/src/app.css
@@ -464,9 +464,10 @@ button:hover {
 
 /* For Mobile */
 @media screen and (max-width: 540px) {
+
   .mainHeader {
     height: 100%;
-    width: 100vw;
+    width: 100%;
     align-items: center;
     justify-content: space-evenly;
     margin: 0px;
@@ -517,7 +518,6 @@ button:hover {
   }
   /* --------------- Hero Section ---------------- */
   .hero {
-    width: 100vw;
     height: 100vh;
   }
   #heroDiv {
@@ -714,12 +714,18 @@ button:hover {
     font-size: 2.5rem;
   }
   body {
-    width: 100vw;
+    width: 100%;
+  }
+  section {
+    width: 100%;
   }
 }
 
 /* For Tablet */
 @media screen and (min-width: 540px) and (max-width: 820px) {
+  #mainHeader {
+    width: 100%;
+  }
   .mainHeader {
     height: 100%;
     width: 100vw;
@@ -956,6 +962,7 @@ button:hover {
   }
   #footer {
     height: 15vh;
+    width: 100%;
   }
   #footerContent {
     width: 100vw;
@@ -981,5 +988,8 @@ button:hover {
   }
   body {
     width: 100vw;
+  }
+  section {
+    width: 100%;
   }
 }
